syntax = "proto3";

package api;

option go_package = "/message/social";

import "idl/api/models.proto";

// Social API
message RelationActionRequest {
    string token = 1;       // 用户鉴权token
    int64 to_user_id = 2;   // 对方用户ID
    int64 action_type = 3;  // 1-关注，2-取消关注
}

message RelationActionResponse {
    int64 status_code = 1;  // 状态码，0-成功，其他值-失败
    string status_msg = 2;  // 返回状态描述
}

message RelationFollowListRequest {
    int64 user_id = 1;  // 用户ID
    string token = 2;   // 用户鉴权token
}

message RelationFollowListResponse {
    int64 status_code = 1;          // 状态码，0-成功，其他值-失败
    string status_msg = 2;          // 返回状态描述
    repeated User user_list = 3;    // 用户信息列表
}

message RelationFollowerListRequest {
    int64 user_id = 1;  // 用户ID
    string token = 2;   // 用户鉴权token
}

message RelationFollowerListResponse {
    int64 status_code = 1;          // 状态码，0-成功，其他值-失败
    string status_msg = 2;          // 返回状态描述
    repeated User user_list = 3;    // 用户列表
}

message RelationFriendListRequest {
    int64 user_id = 1;  // 用户ID
    string token = 2;   // 用户鉴权token
}

message RelationFriendListResponse {
    int64 status_code = 1;          // 状态码，0-成功，其他值-失败
    string status_msg = 2;          // 返回状态描述
    repeated User user_list = 3;    // 用户列表
}